@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2014-04-04 r65373) -- "Unsuffered Consequences"
+R Under development (unstable) (2014-04-07 r65383) -- "Unsuffered Consequences"
 Copyright (C) 2014 The R Foundation for Statistical Computing
 Platform: x86_64-unknown-linux-gnu (64-bit)
 
@@ -1293,6 +1293,18 @@ Warning messages:
 > ## extreme tail of non-central chisquare
 > stopifnot(all.equal(pchisq(200, 4, ncp=.001, log.p=TRUE), -3.851e-42))
 > ## jumped to zero too early up to R 2.10.1 (PR#14216)
+> ## left "extreme tail"
+> lp <- pchisq(2^-(0:200), 100, 1, log=TRUE)
+> stopifnot(is.finite(lp), lp < -184,
++ 	  all.equal(lp[201], -7115.10693158))
+> dlp <- diff(lp)
+> range(dd <- abs(dlp[-(1:30)] - -34.65735902799))
+[1] 1.989520e-13 2.187619e-10
+> stopifnot(-34.66 < dlp, dlp < -34.41, dd < 1e-8)# 2.2e-10 64bit Lnx
+> ## underflowed to -Inf much too early in R <= 3.1.0
+> for(e in c(0, 2e-16))# continuity at 80 (= branch point)
++ stopifnot(all.equal(pchisq(1:2, 1.01, ncp = 80*(1-e), log=TRUE),
++ 		    c(-34.57369629, -31.31514671)))
 > 
 > ## logit() == qlogit() on the right extreme:
 > x <- c(10:80, 80 + 5*(1:24), 200 + 20*(1:25))
@@ -1338,5 +1350,5 @@ Warning messages:
 > 
 > 
 > cat("Time elapsed: ", proc.time() - .ptime,"\n")
-Time elapsed:  0.701 0.008 0.711 0 0 
+Time elapsed:  0.863 0.006 0.872 0 0 
 > 
